--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,19 @@ body {
             padding: 20px;
             border-radius: 8px;
 	    }
-.th img {
-	width: 200px;
-}
-.table
+
+
+ table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-top: 20px;
+        }
+
+        table, th, td {
+            border: 1px solid #ddd;
+        }
+
+        th, td {
+            padding: 10px;
+            text-align: left;
+		}
